--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "create-rc-bot",
   "version": "1.0.0",
   "description": "CLI tool to quickly create a RingCentral MVP bot",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
