--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-rc-bot",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "CLI tool to quickly create a RingCentral MVP bot",
   "main": "lib/index.js",
   "files": [
