--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
   "homepage": "https://github.com/jacksonmelcher/create-rc-bot#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "commander": "^4.1.1"
+    "clear": "^0.1.0",
+    "commander": "^4.1.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
 }
