--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "package/*"
   ],
   "scripts": {
-    "tsc": "tsc",
-    "dev:help": "tsc && node lib/src/index.js --help",
-    "dev": "tsc && node lib/src/index.js my-bot",
-    "dev:no-name": "tsc && node lib/src/index.js"
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts my-app",
+    "start:windows": "nodemon --watch 'src/**/*.ts' --exec \"npx ts-node\" src/index.ts",
+    "create": "npm run build && npm run test",
+    "build": "tsc -p .",
+    "local": "sudo npm i -g && pizza",
+    "refresh": "rm -rf ./node_modules ./package-lock.json && npm install"
   },
   "repository": {
     "type": "git",
@@ -34,9 +36,13 @@
     "chalk": "^4.1.2",
     "clear": "^0.1.0",
     "commander": "^4.1.1",
+    "figlet": "^1.5.2",
+    "fs-extra": "^10.0.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.4",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.21",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
