--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "types": ["node"]
   },
   "include": ["src/**/*"],
-  "files": ["package.json"]
+  "files": ["package.json", "main-template"]
 }
