--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix ",
     "dev:help": "tsc && node lib/src/index.js --help",
     "dev": "tsc && node lib/src/index.js my-bot",
     "dev:no-name": "tsc && node lib/src/index.js"
@@ -38,6 +39,12 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
